# douyin-knowledge-rag

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.bat  setup.py  start-backend.bat  start-frontend.bat  start.bat
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
backend/: __init__.py  main.py
backend/api/: app.py  deps.py
backend/api/routes/: __init__.py  auth.py  chat.py  export.py  favorites.py  knowledge.py
backend/config/: settings.py
backend/embedding/: __init__.py  base.py  dashscope.py  local.py
backend/llm/: __init__.py  base.py  dashscope.py  ollama.py  openai.py
backend/models/: orm.py  schemas.py
backend/pipeline/: __init__.py  base.py  chunk.py  download.py  embed.py  summarize.py  transcribe.py
backend/providers/: __init__.py  base.py
backend/providers/douyin/: provider_playwright.py
backend/rag/: __init__.py  chain.py  prompt.py  retriever.py
backend/storage/: database.py
backend/vector/: __init__.py  base.py  chroma.py
backend/worker/: tasks.py
backend/workflow/: export.py  sync.py
docker/: Dockerfile  frontend.Dockerfile
frontend/: .npmrc  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/chat/: page.tsx
frontend/components/: NavBar.tsx
frontend/lib/: api.ts
scripts/: start.bat
tests/: conftest.py  test_config.py  test_import.py  test_pipeline_context.py  test_settings.py
(+4 files in other folders)
